# tools.cyxc.club

./: .gitignore  README.md  docker-compose.yml  package.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build-and-push.yml
deploy/: nginx-docker-compose.conf
deploy/helm/: Chart.yaml  values.yaml
deploy/helm/templates/: NOTES.txt  _helpers.tpl  api-deployment.yaml  api-service.yaml  frontend-deployment.yaml  frontend-service.yaml  ingress.yaml  ingressroute.yaml
dev/: Caddyfile  README.md  backends.json
docs/: CONVENTIONS.md
scripts/: dev.mjs
services/: README.md
services/api/: .env.example  Dockerfile  README.md  requirements-dev.txt  requirements.txt
services/api/app/: __init__.py  main.py
services/api/app/api/v1/: router.py
services/api/app/core/: config.py  lifespan.py
services/api/app/schemas/: coordinator.py
services/api/app/tools/: registry.py
services/api/app/tools/example/: router.py
services/api/app/tools/markitdown/: router.py  schemas.py  service.py
services/api/tests/: test_health.py  test_markitdown.py
services/common/: pyproject.toml
services/common/tools_common/: __init__.py  config.py  factory.py  schemas.py
web/: .env.development.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: App.tsx  index.css
web/src/api/: client.ts
web/src/layouts/: MainLayout.tsx
web/src/pages/: ExampleTool.tsx  Home.tsx  MarkitdownTool.tsx
web/src/tools/: api-prefix.ts  registry.ts
