[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tools-common"
version = "0.1.0"
description = "Shared FastAPI utilities for tools.cyxc.club backends"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "pydantic-settings>=2.6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["tools_common"]
